--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGO_URI=
+MONGO_URI=mongodb+srv://RiO:<password>@abcphotodb.jzayn.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 SECRET_OR_KEY=secret
-NODEMAILER_USER=Сюда пишем єлектронный адрес для интернет-магазина
-NODEMAILER_PASSWORD=Сюда пишем пароль к почте
+NODEMAILER_USER=romashlink@gmail.com
+NODEMAILER_PASSWORD=93ForrtranR%
 NODEMAILER_SERVICE=gmail
