--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGO_URI=mongodb+srv://RiO:<password>@abcphotodb.jzayn.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-SECRET_OR_KEY=secret
-NODEMAILER_USER=romashlink@gmail.com
-NODEMAILER_PASSWORD=93ForrtranR%
+MONGO_URI=mongodb+srv://elijah:jie4aaEbtZu5AXZI@abcgoods.mgeyc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+SECRET_OR_KEY=$ecret
+NODEMAILER_USER=
+NODEMAILER_PASSWORD=
 NODEMAILER_SERVICE=gmail
